# crosscures

./: .env.example  .gitignore  CLAUDE.md  README.md  epic_fhir_client.py  fhir_summarizer.py  ingest_to_duckdb.py  main.py  patient_longitudinal_data.py  pyproject.toml  start.sh  test_duckdb_data.py
Crosscure_implementation/: crosscures_implementation.md
backend/: main.py  pyproject.toml  requirements.txt
crosscures/: README.md  __init__.py  app.py  pyproject.toml
crosscures/controllers/: __init__.py  checkin.py  voice.py
crosscures/models/: __init__.py  constants.py  schemas.py
crosscures/repositories/: __init__.py  base.py  providers.py
crosscures/services/: __init__.py  cartesia_client.py  generator.py  llm_client.py
crosscures/services/llm/: __init__.py  cloud_provider.py  errors.py  gemini_provider.py  local_provider.py  provider.py
crosscures/views/: __init__.py  index.html
crosscures/views/css/: base.css  tree.css
crosscures/views/js/: api.js  app.js  banner.js  patients.js  questionnaire.js  state.js  summary.js  tree.js  voice.js
crosscures_v2/: README.md  start.sh
crosscures_v2/offline_eval/: README.md  __init__.py  assembler.py  config.py  generator.py  load_eval_data.py  models.py  normalizer.py  pyproject.toml  requirements.txt  runner.py  scorer.py
ehrshots/: README.md  ingest_to_duckdb.py  patient_longitudinal_data.py  pyproject.toml  search_duckdb.py  test_duckdb_data.py
epic/: README.md  TOKEN_MANAGEMENT.md  constants.py  epic_fhir_client.py  pyproject.toml  refresh_epic_token.sh  refresh_token_direct.py  test_epic_connection.py
frontend/: next.config.js  package-lock.json  package.json
medalign/: README.md  get_all_patient_notes.py  get_patient_records.py  ingest_medalign_to_duckdb.py  pyproject.toml
medalign_scripts/: get_patient_notes.py
specs/: kapil_eval.md
voice_agent/: README.md  __init__.py  context.txt  env.py  main.py  pyproject.toml  setup.sh
(+112 files in other folders)
