[project]
name = "crosscures-workspace"
version = "0.1.0"
description = "CrossCures monorepo workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "backend",
    "ehrshots",
    "epic",
    "medalign",
    "voice_agent",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.26.0",
]
