[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "crosscures"
version = "0.1.0"
description = "CrossCures Stage 1 MVP - Pre-Visit Adaptive Questionnaire"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.9.2",
    "fastapi>=0.111.0",
    "openai>=1.30.0",
    "pydantic>=2.6.3",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
]
