[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "crosscures"
version = "0.1.0"
description = "CrossCures Stage 1 MVP - Pre-Visit Adaptive Questionnaire"
requires-python = ">=3.12"
dependencies = [
    "cartesia-line>=0.2.3",
    "duckdb>=0.9.2",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.6.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
]
