[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["offline_eval"]

[project]
name = "offline-eval"
version = "0.1.0"
description = "Offline evaluation pipeline for history-taking question generation"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.30.0",
]
